fix: Fixes panel layout overflow

--- a/src/panel-layout/styles.scss
+++ b/src/panel-layout/styles.scss
@@ -47,6 +47,8 @@
   }
   .display-panel-only > & {
     flex: 1;
+    overflow-y: auto;
+    overflow-x: visible;
   }
 }
 
